<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/colorPrimaryDark"
    android:alpha="0.5">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit_app"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:textSize="40sp"
        android:layout_gravity="center"
        android:paddingBottom="10dp" />

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/do_you_want_to_leave"
        android:textColor="@color/colorPrimary"
        android:gravity="center"
        android:textSize="25sp"
        android:layout_gravity="center"
        android:paddingBottom="10dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/yesButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:textSize="25sp"
            android:textColor="@color/colorPrimary"
            android:backgroundTint="@color/green"
            android:backgroundTintMode="src_in"
            android:layout_marginEnd="30dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/noButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:textSize="25sp"
            android:textColor="@color/colorPrimary"
            android:backgroundTint="@color/red"
            android:backgroundTintMode="src_in"
            android:layout_marginStart="30dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</LinearLayout>
