<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/image2"
    tools:context=".Design2">

<ImageView
    android:id="@+id/imageView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/back"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_marginStart="0dp"
    android:layout_marginEnd="0dp"
    android:alpha="0.5"
    android:foregroundGravity="center"
    android:scaleType="centerCrop"
    android:src="@drawable/black_transparent"
    tools:ignore="MissingConstraints"
    tools:layout_editor_absoluteY="360dp"
    />

<com.example.game.board2
    android:id="@+id/board"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintVertical_bias="1.0"
    custom:boardColor="#FFFFFF"
    custom:dotColor="#5ABEFA"

    custom:goatImage="@drawable/goat"
    custom:selectedGoatImage="@drawable/selected_goat"
    custom:selectedTigerImage="@drawable/selected_tiger"
    custom:tigerImage="@drawable/tiger"

    />

    <LinearLayout
        android:id="@+id/Line1"
        android:layout_width="200dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textSize="30sp"
            android:textColor="@color/colorPrimary"
            android:text="@string/remaining"

            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/remaining"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textSize="30sp"
            android:textColor="@color/colorPrimary"
            android:text="@string/aliveGoats15"

            tools:ignore="MissingConstraints" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/Line2"
        android:layout_width="155dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/text3"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textSize="30sp"
            android:textColor="@color/colorPrimary"
            android:text="@string/kills"

            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/kills"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textSize="30sp"
            android:textColor="@color/colorPrimary"
            android:text="@string/board2value"

            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/totalKills"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textSize="30sp"
            android:textColor="@color/colorPrimary"
            android:text="@string/kills10"

            tools:ignore="MissingConstraints" />

    </LinearLayout>

    <ImageView
        android:id="@+id/pauses"
        android:name=".pause"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/pause"
        android:onClick="pauseButtonClick"
        android:src="@drawable/pause"
        android:theme="@style/DialogTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.02"

        />

</androidx.constraintlayout.widget.ConstraintLayout>