<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:fitsSystemWindows="true"
    android:gravity="center"
    android:background="@drawable/background_image2"
    tools:context=".Winning_View"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/winning_background_image2"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:gravity="center"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="5dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="77dp"
                android:gravity="center"
                android:text="@string/congratulations"
                android:textColor="@color/green"
                android:textSize="40sp"
                android:textStyle="bold|italic" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center">

            <TextView
                android:id="@+id/peice1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:gravity="center"
                android:text="@string/peace"
                android:textColor="#000000"
                android:textSize="35sp"
                android:textStyle="bold|italic"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/won2"
                android:textColor="#000000"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:textSize="35sp"
                android:textStyle="bold|italic" />



        </LinearLayout>

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/img1"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/home"
                android:layout_marginEnd="30dp"
                android:theme="@style/DialogTheme"
                android:gravity="center"
                android:contentDescription="@string/home" />

            <Button
                android:id="@+id/img2"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/replay"
                android:theme="@style/DialogTheme"
                android:layout_marginStart="30dp"
                android:gravity="center"
                android:contentDescription="@string/re_play"
                />

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>