<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main3"
    android:layout_width="match_parent"
    android:layout_height="350dp"
    android:fitsSystemWindows="true"
    android:gravity="center"
    android:background="@drawable/winning_background_image2"
    tools:context=".PauseActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_image2"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:gravity="center"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:gravity="center">

            <TextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/sound"
                android:paddingStart="10dp"
                android:paddingEnd="5dp"
                android:textColor="#000000"
                android:textSize="40sp"
                android:textStyle="bold|italic" />

            <ToggleButton
                android:id="@+id/btn1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:background="@drawable/sound"
                android:checked="true"
                android:textOff=""
                android:textOn=""
                android:text="" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            >

            <Button
                android:id="@+id/resumeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorAccent"
                android:gravity="center"
                android:paddingStart="50dp"
                android:paddingEnd="40dp"
                android:text="@string/resume3"
                android:textColor="#000000"
                android:textSize="40sp"
                android:textStyle="bold|italic"
                android:theme="@style/DialogTheme"
                android:contentDescription="@string/resume"
                />

        </LinearLayout>

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:gravity="center">

            <Button
                android:id="@+id/img1"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/home"
                android:layout_marginEnd="20dp"
                android:theme="@style/DialogTheme"
                android:gravity="center"
                android:contentDescription="@string/home" />

            <Button
                android:id="@+id/img2"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/replay"
                android:theme="@style/DialogTheme"
                android:layout_marginStart="20dp"
                android:gravity="center"
                android:contentDescription="@string/re_play"
                />

        </LinearLayout>


    </LinearLayout>



</RelativeLayout>